# janken-hub

./: .gitignore  CLAUDE.md  DESIGN.md  README.md  compose.yaml  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.claude/: NEXT_STEPS.md  PROGRESS.md  TODO.md
.github/workflows/: deploy.yml
backend/: .gitignore  Dockerfile  pyproject.toml
backend/app/: __init__.py  main.py  models.py  websocket.py
backend/app/game_rules/: __init__.py  achi_muite_hoi.py  base.py  classic_rps.py  ido_janken.py
backend/app/npc/: __init__.py  random_ai.py
docs/: architecture.md  migration-pixijs.md
frontend/: Dockerfile.dev  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/services/: websocketService.ts
frontend/src/types/: game.ts
src/: index-html.test.ts  main.test.ts  main.ts
src/game/: App.test.ts  App.ts  InputEdgeDetector.test.ts  InputEdgeDetector.ts  Scene.test.ts  Scene.ts  constants.test.ts  constants.ts  input.test.ts  input.ts  state.test.ts  state.ts  types.ts
src/game/npc/: CharacterDisplay.ts  MemoryAI.test.ts  MemoryAI.ts  RandomAI.test.ts  RandomAI.ts  WeightedAI.test.ts  WeightedAI.ts  characters.test.ts  characters.ts  index.ts  types.ts
src/game/rules/: achi_muite_hoi.test.ts  achi_muite_hoi.ts  classic_rps.test.ts  classic_rps.ts  ido_janken.test.ts  ido_janken.ts
src/game/scenes/: AchiMuiteHoiScene.test.ts  AchiMuiteHoiScene.ts  ClassicRpsScene.test.ts  ClassicRpsScene.ts  GameScene.ts  IdoJankenScene.test.ts  IdoJankenScene.ts  ResultScene.ts  (+2 more)
(+4 files in other folders)
